fix styles: add visibility for active submenu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -101,6 +101,7 @@
 
 .active .submenu {
   opacity: 1;
+  visibility: visible;
 }
 
 @media screen and (min-width: 1024px) {
